ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
     name: dashboard
     namespace: kubernetes-dashboard
     annotations:
        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
#  tls:
#  - hosts:
#    - 10.71.1.52
#    secretName: tls-secret
  ingressClassName: "nginx"
  rules:
  - host: dashboard.com
    http:
     paths: 
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: kubernetes-dashboard-nodeport 
            port: 
              number: 443
